Made big changes to resume formatting, as well as shortening many sections.

--- a/swall_resume.tex
+++ b/swall_resume.tex
@@ -17,8 +17,8 @@
 
 
 %Space definitions
-\def\newsectn{\vspace*{0.8cm}}
-\def\newempl{\vspace*{0.5cm}}
+\def\newsectn{\vspace*{0.6cm}}
+\def\newempl{\vspace*{0.4cm}}
 \def\newitem{\vspace*{0.2cm}}
 
 
@@ -32,46 +32,32 @@
 
 \begin{center}
 {\Large{\textbf{Jenise L.~Swall}}}\\
-{\Large{Statistician}}
+{\Large{Research statistician}}\\ \vspace*{0.05in}
+Richmond, VA $\quad | \quad$ 804-244-2238 $\quad | \quad$ jlswall@alum.mit.edu\\
+\hrulefill
 \end{center}
 
-\begin{minipage}[t]{0.33\textwidth}
-9551 Creek Summit Circle\\
-Richmond, VA 23235
-\end{minipage}
-\hfill
-\begin{minipage}[t]{0.33\textwidth}
-\begin{flushright}
-jlswall@alum.mit.edu\\
-804-244-2238
-\end{flushright}
-\end{minipage}
 
 
-\vspace*{0.8cm}
+%\vspace*{0.1in}
 
 
 
-\noindent \textbf{Professional profile}
-
-Accomplished statistician, research scientist, and programmer (R, C,
-SAS).  Adept in all phases of statistical model development,
-programming, and evaluation, including Bayesian methods.
-Experienced in handling and analyzing large datasets with
-spatio-temporal variation.
+%\noindent {\Large \textbf{Professional profile}}
+Accomplished statistician, research scientist, and communicator.  Adept in all
+phases of statistical model development, programming, and evaluation, including
+Bayesian methods. Experienced in cross-disciplinary collaboration and
+distillation of technical results for audiences at all levels.
 
 
 
 \newsectn
-
-
-
-\noindent \textbf{Experience}  %%Employment
+\noindent {\Large \textbf{Experience}} 
 
 
 %\newempl
-\textsc{Virginia Commonwealth University, Dept.\ of Statistical Sciences \& Operations Research}\\ %% \hfill Richmond, VA\\
-\textit{Associate Professor (tenured)}, 2011-present
+\textbf{Virginia Commonwealth University}  \hfill Richmond, VA\\
+\textit{Associate Professor of Statistics (tenured)}, 2011-present
 
 \begin{list}{$\bullet$}{
 \setlength{\topsep}{0cm}
@@ -95,8 +81,8 @@ undergraduate and graduate levels
 
 
 \newempl
-\textsc{Chegg, Inc.}\\  %%\hfill Santa Clara, CA
-\textit{Sr.\ Data Scientist}, June 2014-December 2014
+\textbf{Chegg, Inc.}  \hfill Santa Clara, CA\\
+\textit{Senior Data Scientist}, 2014 %June 2014-December 2014
 
 \begin{list}{$\bullet$}{
 \setlength{\topsep}{0cm}
@@ -116,7 +102,7 @@ undergraduate and graduate levels
 
 
 \newempl
-\textsc{U.S.\ Environmental Protection Agency}\\ %% \hfill Research Triangle Park, NC\\
+\textbf{U.S.\ Environmental Protection Agency}  \hfill Research Triangle Park, NC\\
 \textit{Statistician}, 2003-2011\\
 Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 2003-2008
@@ -141,122 +127,136 @@ Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 
 
 
+
+
+% %% \newempl
+% \textsc{Kenyon College, Dept.\ of Mathematics}\\ %% \hfill Gambier, OH\\
+% \textit{Assistant Professor}, 2001-2003
+
+% \begin{list}{$\bullet$}{
+% \setlength{\topsep}{0cm}
+% \setlength{\partopsep}{0cm}
+% \setlength{\parsep}{0cm}
+% \setlength{\itemsep}{0cm}
+% \setlength{\labelsep}{1ex}
+% \setlength{\labelwidth}{1em}
+% \setlength{\leftmargin}{1em}
+% }
+% \item Developed and implemented non-stationary Bayesian spatial models, with emphasis on incorporation of censored data and improvement in computational efficiency
+% \item Designed and taught courses in introductory statistics, data analysis,
+% design and analysis of experiments, probability, and mathematical
+% statistics
+% %% \item Advised students (math and non-math majors) and supervised students completing senior projects.
+% \end{list}
+
+
+
+% \newempl
+% \textsc{Los Alamos National Laboratory, Statistical Sciences Group}\\ %%\hfill Los Alamos, NM\\
+% \textit{Visiting Faculty Program}, 2002
+
+% \begin{list}{$\bullet$}{
+% \setlength{\topsep}{0cm}
+% \setlength{\partopsep}{0cm}
+% \setlength{\parsep}{0cm}
+% \setlength{\itemsep}{0cm}
+% \setlength{\labelsep}{1ex}
+% \setlength{\labelwidth}{1em}
+% \setlength{\leftmargin}{1em}
+% }
+% \item Developed model comparison methodologies for Bayesian spatial
+%   modeling techniques
+% \end{list}
+
+
+
+
+% \newempl
+% \textsc{Duke University, Dept.\ of Statistical Science}\\ %% \hfill Durham, NC\\
+% \textit{Visiting Assistant Professor}, 2000-2001
+
+% \begin{list}{$\bullet$}{
+% \setlength{\topsep}{0cm}
+% \setlength{\partopsep}{0cm}
+% \setlength{\parsep}{0cm}
+% \setlength{\itemsep}{0cm}
+% \setlength{\labelsep}{1ex}
+% \setlength{\labelwidth}{1em}
+% \setlength{\leftmargin}{1em}
+% }
+% \item Continued development of non-stationary spatial modeling techniques, with
+% emphasis on modeling correlation dependence structure as a mixture of
+% a set of weighted "basis" kernels
+% \item Increased computational efficiency of spatial modeling
+%   techniques, without requiring assumptions of stationarity or
+%   isotropy
+% \item Designed and taught a new calculus-based statistics course for economics majors, with an enrollment of over 100 students each semester
+% %% \item Developed an archive of teaching materials for use by future faculty members teaching this course.
+% \end{list}
+
+
+% \newempl
+% \textsc{SAS Institute}\\ %% \hfill Cary, NC\\
+% %Assistant Applications Developer (Consulting Services), June
+% %1996-August 1997\\
+% \textit{Assistant Applications Developer}, 1996-1997
+
+% \begin{list}{$\bullet$}{
+% \setlength{\topsep}{0cm}
+% \setlength{\partopsep}{0cm}
+% \setlength{\parsep}{0cm}
+% \setlength{\itemsep}{0cm}
+% \setlength{\labelsep}{1ex}
+% \setlength{\labelwidth}{1em}
+% \setlength{\leftmargin}{1em}
+% }
+% \item Designed and implemented SAS software solutions, with emphasis on
+% providing user-friendly interfaces, maintaining data security,
+% managing databases, and generating reports easily and efficiently
+% \item Advised clients in areas such as banking, human resources management, and
+% educational administration
+% \end{list}
+% %\newitem
+
+% %\textsc{Inter-National Research Institute} \hfill Newport News, VA\\
+% %Junior Software Quality Assurance Analyst, summer months and January, 1992-1995\\
+% %Prepared and executed test procedures for naval communications and
+% %tactical software.  Worked closely with software developers and
+% %ensured quality of software additions, patches, and integrated builds.
+
+
+
+\newsectn
+{\Large \textbf{Education}}
+
+%\newitem
+\textbf{Duke University} \hfill Durham, NC\\
+Ph.D.~in Statistics and Decision Sciences %, December 1999\\
+%% \hspace*{0.4cm}Dissertation: \textbf{Non-stationary spatial modeling using a process convolution approach}\\
+%% M.S.~in Statistics and Decision Sciences %, May 1996
+
 \newpage
 \newgeometry{top=0.75in, bottom=0.75in, left=0.75in, right=0.75in, headsep=0.5in}
 
 
 
-%% \newempl
-\textsc{Kenyon College, Dept.\ of Mathematics}\\ %% \hfill Gambier, OH\\
-\textit{Assistant Professor}, 2001-2003
-
-\begin{list}{$\bullet$}{
-\setlength{\topsep}{0cm}
-\setlength{\partopsep}{0cm}
-\setlength{\parsep}{0cm}
-\setlength{\itemsep}{0cm}
-\setlength{\labelsep}{1ex}
-\setlength{\labelwidth}{1em}
-\setlength{\leftmargin}{1em}
-}
-\item Developed and implemented non-stationary Bayesian spatial models, with emphasis on incorporation of censored data and improvement in computational efficiency
-\item Designed and taught courses in introductory statistics, data analysis,
-design and analysis of experiments, probability, and mathematical
-statistics
-%% \item Advised students (math and non-math majors) and supervised students completing senior projects.
-\end{list}
-
-
-
-\newempl
-\textsc{Los Alamos National Laboratory, Statistical Sciences Group}\\ %%\hfill Los Alamos, NM\\
-\textit{Visiting Faculty Program}, 2002
-
-\begin{list}{$\bullet$}{
-\setlength{\topsep}{0cm}
-\setlength{\partopsep}{0cm}
-\setlength{\parsep}{0cm}
-\setlength{\itemsep}{0cm}
-\setlength{\labelsep}{1ex}
-\setlength{\labelwidth}{1em}
-\setlength{\leftmargin}{1em}
-}
-\item Developed model comparison methodologies for Bayesian spatial
-  modeling techniques
-\end{list}
-
-
-
-
-\newempl
-\textsc{Duke University, Dept.\ of Statistical Science}\\ %% \hfill Durham, NC\\
-\textit{Visiting Assistant Professor}, 2000-2001
-
-\begin{list}{$\bullet$}{
-\setlength{\topsep}{0cm}
-\setlength{\partopsep}{0cm}
-\setlength{\parsep}{0cm}
-\setlength{\itemsep}{0cm}
-\setlength{\labelsep}{1ex}
-\setlength{\labelwidth}{1em}
-\setlength{\leftmargin}{1em}
-}
-\item Continued development of non-stationary spatial modeling techniques, with
-emphasis on modeling correlation dependence structure as a mixture of
-a set of weighted "basis" kernels
-\item Increased computational efficiency of spatial modeling
-  techniques, without requiring assumptions of stationarity or
-  isotropy
-\item Designed and taught a new calculus-based statistics course for economics majors, with an enrollment of over 100 students each semester
-%% \item Developed an archive of teaching materials for use by future faculty members teaching this course.
-\end{list}
-
-
-\newempl
-\textsc{SAS Institute}\\ %% \hfill Cary, NC\\
-%Assistant Applications Developer (Consulting Services), June
-%1996-August 1997\\
-\textit{Assistant Applications Developer}, 1996-1997
-
-\begin{list}{$\bullet$}{
-\setlength{\topsep}{0cm}
-\setlength{\partopsep}{0cm}
-\setlength{\parsep}{0cm}
-\setlength{\itemsep}{0cm}
-\setlength{\labelsep}{1ex}
-\setlength{\labelwidth}{1em}
-\setlength{\leftmargin}{1em}
-}
-\item Designed and implemented SAS software solutions, with emphasis on
-providing user-friendly interfaces, maintaining data security,
-managing databases, and generating reports easily and efficiently
-\item Advised clients in areas such as banking, human resources management, and
-educational administration
-\end{list}
-%\newitem
-
-%\textsc{Inter-National Research Institute} \hfill Newport News, VA\\
-%Junior Software Quality Assurance Analyst, summer months and January, 1992-1995\\
-%Prepared and executed test procedures for naval communications and
-%tactical software.  Worked closely with software developers and
-%ensured quality of software additions, patches, and integrated builds.
+\newitem
+\textbf{Massachusetts Institute of Technology} \hfill Cambridge, MA\\
+B.S.~in Mathematics (applied emphasis)\\ %, May 1994\\
+\textbf{Completed B.S.~degree in three years}
 
 
 
 \newsectn
-\textbf{Education}
+\noindent {\Large \textbf{Computing skills}}
 
-%\newitem
-\textsc{Duke University} \hfill Durham, NC\\
-Ph.D.~in Statistics and Decision Sciences %, December 1999\\
-%% \hspace*{0.4cm}Dissertation: \textbf{Non-stationary spatial modeling using a process convolution approach}\\
-M.S.~in Statistics and Decision Sciences %, May 1996
+\textbf{Expert (20+ years experience)}: R, Linux/UNIX operating systems, LaTeX\\
+\textbf{Proficient}: C, SQL, SAS\\
+\textbf{Novice}: Python
 
-\newitem
-\textsc{Massachusetts Institute of Technology} \hfill Cambridge, MA\\
-B.S.~in Mathematics (applied emphasis)\\ %, May 1994\\
-\textbf{Completed degree in three years}
-
+%SAS experience:  ACCESS, AF, BASE, CONNECT, EIS, FSP, GRAPH, INSIGHT, STAT\\
+%% Document preparation:  LaTeX, Microsoft Office, Google Docs, HTML
+%% Linux systems administration skills: R, LaTeX, ATLAS, GSL
 
 
 \newsectn
@@ -290,169 +290,104 @@ Available from the Comprehensive R Archive Network, last updated May 2012  %% (o
 
 
 
-%% \newsectn
-\newpage
-
-
-\noindent \textbf{Computing skills}
-
-Programming languages:  R, MySQL, C, SAS\\
-Operating systems: Linux/UNIX (20+ years experience), OS X, Windows
-%SAS experience:  ACCESS, AF, BASE, CONNECT, EIS, FSP, GRAPH, INSIGHT, STAT\\
-%% Document preparation:  LaTeX, Microsoft Office, Google Docs, HTML
-%% Linux systems administration skills: R, LaTeX, ATLAS, GSL
-
-
-
-
-
 \newsectn
-\noindent \textbf{Awards}
+\noindent {\Large \textbf{Selected awards}}
 
-2011 Jeanne E.~Griffith Mentoring Award\\  %% Awarded June 2011
+\textbf{Jeanne E.~Griffith Mentoring Award}, 2011 (sole recipient)\\  %% Awarded June 2011
+\textit{Selected annually from statisticians across U.S.~federal government agencies}\\
 %\vspace{-0.06in}
 %\begin{adjustwidth}{0.25in}{}
-\textit{``For the mentoring of junior staff in the federal statistical
-  system''}\\
-Awarded by the Interagency Council on Statistical
-Policy, the Council for Excellence in Government, the Washington
-Statistical Society, the Social Statistics and Government Statistics
-Sections of the American Statistical Association, and the Council of
-Professional Associations on Federal Statistics
+%\textit{``For the mentoring of junior staff in the federal statistical
+%  system''}\\
+$\bullet$ Awarded ``for the mentoring of junior staff in the federal statistical
+system''
+% $\bullet$ Sponsored by the Interagency Council on Statistical
+% Policy, the Council for Excellence in Government, the Washington
+% Statistical Society, the Social Statistics and Government Statistics
+% Sections of the American Statistical Association, and the Council of
+% Professional Associations on Federal Statistics
 %\end{adjustwidth}
 
 \newitem
-2011 Collaboration Award\\
-\textit{``For contributing valuable statistical and programming expertise to projects within AMAD and across ORD in a positive and professional manner''}\\
-Awarded by U.S.\ EPA's Atmospheric Modeling and Analysis Division
+\textbf{2011 Collaboration Award}, 2011 (sole recipient)\\
+\textit{Selected annually from approximately 50 scientific staff in former EPA division}\\
+$\bullet$ Awarded ``for contributing valuable statistical and programming
+expertise to projects within AMAD and across ORD in a positive and professional
+manner''\\
+% $\bullet$ Sponsored by U.S.\ EPA's Atmospheric Modeling and Analysis Division
 
-\newitem
-2011 Special Achievement Award (team award)\\
-\textit{``For efforts to integrate and synthesize data and theory across multiple disciplines''}\\
-Awarded by U.S.\ EPA's National Exposure Research Laboratory 
+% \newitem
+% 2011 Special Achievement Award (team award)\\
+% \textit{``For efforts to integrate and synthesize data and theory across multiple disciplines''}\\
+% Awarded by U.S.\ EPA's National Exposure Research Laboratory 
 
-\newitem
-2008 Bronze Medal for Commendable Service (team award)\\
-\textit{``Through multi-office partnerships, completing a suite
-of products offering critical information on the effectiveness of the NOx SIP Call on air quality''}\\
-Awarded by U.S.\ EPA's Office of Research and Development
+% \newitem
+% 2008 Bronze Medal for Commendable Service (team award)\\
+% \textit{``Through multi-office partnerships, completing a suite
+% of products offering critical information on the effectiveness of the NOx SIP Call on air quality''}\\
+% Awarded by U.S.\ EPA's Office of Research and Development
+
+
+
+
+% \newsectn
+% \noindent \textbf{Professional organizations}
+
+% American Statistical Association\\
+%   \hspace*{0.3cm}Section on Bayesian Statistical Science\\
+%   \hspace*{0.3cm}Section on Statistics and the Environment\\
+%   \hspace*{0.3cm}Section for Statistical Programmers and Analysts\\
+% Institute of Mathematical Statistics\\
+% Mu Sigma Rho, national honor society of statistics %%(admitted Apr.~2013)
 
 
 
 
 \newsectn
-\noindent \textbf{Professional organizations}
+{\Large \textbf{Recent peer-reviewed publications}} (more at
+\url{https://orcid.org/0000-0001-8728-5771})
 
-American Statistical Association\\
-  \hspace*{0.3cm}Section on Bayesian Statistical Science\\
-  \hspace*{0.3cm}Section on Statistics and the Environment\\
-  \hspace*{0.3cm}Section for Statistical Programmers and Analysts\\
-Institute of Mathematical Statistics\\
-Mu Sigma Rho, national honor society of statistics %%(admitted Apr.~2013)
+% %%\vspace*{-0.1in}
+% \newcounter{pub_index}
+% \begin{list}{\arabic{pub_index}. }
+% {\usecounter{pub_index}
+% \setlength{\topsep}{0em}
+% \setlength{\labelsep}{0em}
+% \setlength{\labelwidth}{0em}
+% \setlength{\itemindent}{0em}
+% \setlength{\leftmargin}{0cm}
+% \setlength{\itemsep}{0cm}
+% }
 
+$\bullet$ Santillán, P., Edwards, S., \textbf{Swall, J.}, Simmons, T. ``Mass
+grave localization prediction with geographical information systems in
+Guatemala and future impacts", \textit{Journal of Forensic Sciences}, 2022.\\
+% https://doi.org/10.1111/1556-4029.14889
+$\bullet$ Cartozzo, C., Singh, B., \textbf{Swall, J.},  Simmons, T.
+``Postmortem submersion interval (PMSI) estimation from the microbiome of
+\textit{Sus scrofa} bone in a freshwater lake", \textit{Journal of
+Forensic Sciences}, 2021.\\
+%  https://doi.org/10.1111/1556-4029.14692
+$\bullet$ Randall, S.D., Cartozzo, C., Simmons, T., \textbf{Swall, J.~L.},
+Singh, B. ``Prediction of minimum postmortem submersion interval (PMSImin)
+based on eukaryotic community succession on skeletal remains recovered from
+a lentic environment", \textit{Forensic Science International}, 2021.\\
+% https://doi.org/10.1016/j.forsciint.2021.110784.
+$\bullet$ Woods, N., \textbf{Swall, J.~L.}, Zinnert, J.~C. ``Soil salinity
+  impacts future community composition of coastal forests", \textit{Wetlands},
+  2020.
+  % Pub. online 21May2020.
+  % doi: https://doi.org/10.1007/s13157-020-01304-6
 
+% \item \textbf{Swall, J.~L.}, Foley, K.~M., 2009.  The impact of spatial
+% correlation and incommensurability on model evaluation.
+% \textit{Atmospheric Environment}, Vol.~43, No.~6, 1204-1217.
 
-
-\newsectn
-\textbf{Recent publications (full list at \url{http://scholar.google.com/citations?user=Pb_Hvq4AAAAJ})}
-
-%%\vspace*{-0.1in}
-\newcounter{pub_index}
-\begin{list}{\arabic{pub_index}. }
-{\usecounter{pub_index}
-\setlength{\topsep}{0em}
-\setlength{\labelsep}{0em}
-\setlength{\labelwidth}{0em}
-\setlength{\itemindent}{0em}
-\setlength{\leftmargin}{0cm}
-\setlength{\itemsep}{0cm}
-}
-%% \item \textbf{Swall, J.~L.}, Wells, B.~T.  Evaluation of the predictive
-%% performance of statistical climate downscaling models. (in preparation)
-\item Simon, H., Bhave, P.~V., \textbf{Swall, J.~L.}, Frank, N.~H.,
-Malm, W.~C., 2011.  Determining the spatial and seasonal variability in OM/OC
-ratios across the U.S.~using multiple regression. \textit{Atmospheric
-  Chemistry and Physics}, Vol.~11, 2933-2949.  %% Pub. date: 30Mar2011
-
-\item Gronewold, A.~D., Myers, L., \textbf{Swall, J.~L.}, Noble, R.~T., 2011. 
-Addressing uncertainty in fecal indicator bacteria dark inactivation rates.
-\textit{Water Research}, Vol.~45, No.~2, 652-664.  %% Pub. date: Jan2011
-
-\item George, B.~J., Whitaker, D.~A., Gilliam, R.~C., \textbf{Swall,
-J.~L.}, Williams R.~W., 2010. Relationship between PM2.5 collected at
-residential outdoor locations and a central site. \textit{Journal of
-the Air \& Waste Management Association}, Vol.~60, No.~9, 1094-1104.
-
-\item \textbf{Swall, J.~L.}, Foley, K.~M., 2009.  The impact of spatial
-correlation and incommensurability on model evaluation.
-\textit{Atmospheric Environment}, Vol.~43, No.~6, 1204-1217.
-
-% \item Irwin, J., Civerlo, K., Hogrefe, C., Appel, K., Foley, K.,
-% \textbf{Swall, J.}, 2008. A procedure for inter-comparing the skill of
-% regional-scale air quality model simulations of daily maximum 8-hour
-% ozone values.  \textit{Atmospheric Environment}, Vol.~42, No.~21, 5403-5412.
-
-% \item Cooter, E., Gilliam, R., Benjey, W., Nolte, C., \textbf{Swall, J.},
-% Gilliland, A, 2007.  Examining the impact of changing climate on regional
-% air quality over the U.S.  \textit{Developments in Environmental
-% Sciences}, Chp.~6.1, Vol.~6.
-
-% \item Cooter, E., \textbf{Swall, J.}, Gilliam, R., 2007. Comparison of 700
-% hPa NCEP-R1 and AMIP-R2 wind patterns over the continental U.S.~using
-% cluster analysis. \textit{Journal of Applied Meteorology and
-%   Climatology}, Vol.~46, No.~11, 1744-1758.
-
-% \item Zheng, J., \textbf{Swall, J.~L.}, Cox, W.~M., and Davis,
-% J.~M., 2007.  Interannual variation in meteorologically adjusted
-% ozone levels in the eastern United States: a comparison of two
-% approaches. \textit{Atmospheric Environment}, Vol.~41, No.~4,
-% 705-716.
-
-% \item Kora\v{c}in, D., Panorska, A., Isakov, V., Touma, J., \textbf{Swall,
-% J.}., 2007.  A statistical approach for estimating uncertainty in
-% dispersion modeling: An example of application in southwestern
-% U.S. \textit{Atmospheric Environment}, Vol.~41, No.~3, 617-628.
-
-% \item \textbf{Swall, J.~L.} Davis, J.~M., 2006. A Bayesian
-% statistical approach for the evaluation of CMAQ. \textit{Atmospheric
-% Environment}, Vol.~40, No.~26, 4883-4893.
-
-% \item Ching, J., Herwehe, J., \textbf{Swall, J.}, 2006.
-% Paradigm using joint deterministic grid modeling and sub-grid
-% variability stochastic descriptions as a template of model
-% evaluation. \textit{Atmospheric Environment}, Vol.~40, No.~26, 4935-4945.
-
-% \item Hogrefe, C., Porter, P.~S., Gego, E., Gilliland, A., Gilliam, R.,
-% \textbf{Swall, J.}, Irwin, J., Rao, S.~T., 2006. Temporal features in
-% observed and predicted meteorology and air quality over the Eastern
-% United States. \textit{Atmospheric Environment}, Vol.~40, No.~26, 5041-5055.
-
-% \item Davis, J.~M., \textbf{Swall, J.~L.}, 2006.  An examination
-% of the CMAQ simulations of the wet deposition of ammonium from a
-% Bayesian perspective. \textit{Atmospheric Environment}, Vol.~40,
-% No.~24, 4562-4573.
-
-% \item Yu, S., Dennis, R., Roselle, S., Nenes, A., Walker, J., Eder, B.,
-% Schere, K., \textbf{Swall, J.}, Robarge, W., 2005.  An assessment of
-% the ability of 3-D air quality models with current thermodynamic
-% equilibrium models to predict aerosol $\mbox{NO}_3^{-}$.
-% \textit{Journal of Geophysical Research}, 110, D07S13,
-% doi:10.1029/2004JD004718.
-
-% %\item ``Comparison of various kernel smoothing approaches to
-% %modeling non-stationary spatial processes'', J.~Swall and D.~Higdon
-% %(in preparation)
-
-% \item Higdon, D., \textbf{Swall, J.}, Kern, J., 1999. ``Non-Stationary Spatial
-% Modeling.''  \textit{Bayesian Statistics 6}, Oxford University Press.
-
-% %% \item \textbf{Swall, J.L.}, 1999.  ``Non-stationary spatial modeling using a process convolution approach'', Ph.D.~Dissertation, Duke University.
-
-\end{list}
+%\end{list}
 
 
-%% \vspace*{0.5in}
-%% \textbf{Long-form academic CV available upon request}
+\vspace*{0.3in}
+\textbf{Long-form academic CV available upon request}
 
 
 
