Minor changes to job-related bullet points.  Spacing and format changes to software and publication sections.

--- a/swall_resume.tex
+++ b/swall_resume.tex
@@ -68,9 +68,9 @@ distillation of technical results for audiences at all levels.
 \setlength{\labelwidth}{1em}
 \setlength{\leftmargin}{1em}
 }
+\item Utilized random forest techniques with bacterial and eukaryotic genomic data for predicting
+post-mortem interval 
 \item Implemented overdispersed Poisson regression models for assessing the impact of air pollutants on mortality
-\item Evaluated the predictive performance of statistical climate
-  downscaling models
 \item Reviewed and recommended adjustments for proprietary statistical
   modeling strategies for Capital One
 \item Designed and taught courses in probability and statistics at the
@@ -120,6 +120,8 @@ Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 \item Implemented Bayesian dynamic linear modeling strategies to assess long-term trends in air quality and climate
 \item Identified statistical techniques to address measurement uncertainty and collinearity in estimation of organic mass to organic carbon ratios
 \item Applied clustering and classification algorithms to identify long-term wind patterns over the continental U.S.
+\item Evaluated predictive performance of statistical climate
+  downscaling models
 \item Advised other scientists on statistical inference techniques,
   interpretation of the results of statistical procedures, selection
   of statistical software packages, efficient R programming strategies, etc.
@@ -260,32 +262,32 @@ B.S.~in Mathematics (applied emphasis)\\ %, May 1994\\
 
 
 \newsectn
-\noindent \textbf{Authored software packages}
+\noindent {\Large \textbf{Authored software packages}}
 
 %%\vspace*{-0.1in}
-\newcounter{sw_index}
-\begin{list}{\arabic{sw_index}. }
-{\usecounter{sw_index}
-\setlength{\topsep}{0em}
-\setlength{\labelsep}{0em}
-\setlength{\labelwidth}{0em}
-\setlength{\itemindent}{0em}
-\setlength{\leftmargin}{0cm}
-\setlength{\itemsep}{0cm}
-}
-\item \textbf{aqfig}: R package for displaying air quality model output and monitoring data\\
-Available from the Comprehensive R Archive Network, last updated November 2013  %% (original release June 2011)
+% \newcounter{sw_index}
+% \begin{list}{\arabic{sw_index}. }
+% {\usecounter{sw_index}
+% \setlength{\topsep}{0em}
+% \setlength{\labelsep}{0em}
+% \setlength{\labelwidth}{0em}
+% \setlength{\itemindent}{0em}
+% \setlength{\leftmargin}{0cm}
+% \setlength{\itemsep}{0cm}
+% }
+$\bullet$ \textbf{aqfig}: R package for displaying air quality model output and monitoring data
+%Available from the Comprehensive R Archive Network, last updated November 2013  %% (original release June 2011)
 % \hspace*{0.3cm} Version 0.4 released January 2013\\
 % \hspace*{0.3cm} Version 0.3 released May 2012\\
 % \hspace*{0.3cm} Version 0.2 released October 2011\\
 
-\item \textbf{figdim}: R package for specifying figure dimensions for publication-ready graphics\\
-Available from \url{http://www.people.vcu.edu/~jswall/figdim_index.html}, released November 2013
+$\bullet$ \textbf{figdim}: R package for specifying figure dimensions for publication-ready graphics
+%Available from \url{http://www.people.vcu.edu/~jswall/figdim_index.html}, released November 2013
 
-\item \textbf{M3}: R package for reading and manipulating air quality model output from Models3-formatted files\\
-Available from the Comprehensive R Archive Network, last updated May 2012  %% (original release June 2011)
+$\bullet$ \textbf{M3}: R package for reading and manipulating air quality model output from Models3-formatted files
+%Available from the Comprehensive R Archive Network, last updated May 2012  %% (original release June 2011)
 % \hspace*{0.3cm} Version 0.2 released January 2012\\
-\end{list}
+%\end{list}
 
 
 
@@ -361,17 +363,20 @@ manner''\\
 
 $\bullet$ Santillán, P., Edwards, S., \textbf{Swall, J.}, Simmons, T. ``Mass
 grave localization prediction with geographical information systems in
-Guatemala and future impacts", \textit{Journal of Forensic Sciences}, 2022.\\
+Guatemala and future impacts", \textit{Journal of Forensic Sciences}, 2022.
 % https://doi.org/10.1111/1556-4029.14889
+
 $\bullet$ Cartozzo, C., Singh, B., \textbf{Swall, J.},  Simmons, T.
 ``Postmortem submersion interval (PMSI) estimation from the microbiome of
 \textit{Sus scrofa} bone in a freshwater lake", \textit{Journal of
-Forensic Sciences}, 2021.\\
+Forensic Sciences}, 2021.
+
 %  https://doi.org/10.1111/1556-4029.14692
 $\bullet$ Randall, S.D., Cartozzo, C., Simmons, T., \textbf{Swall, J.~L.},
 Singh, B. ``Prediction of minimum postmortem submersion interval (PMSImin)
 based on eukaryotic community succession on skeletal remains recovered from
-a lentic environment", \textit{Forensic Science International}, 2021.\\
+a lentic environment", \textit{Forensic Science International}, 2021.
+
 % https://doi.org/10.1016/j.forsciint.2021.110784.
 $\bullet$ Woods, N., \textbf{Swall, J.~L.}, Zinnert, J.~C. ``Soil salinity
   impacts future community composition of coastal forests", \textit{Wetlands},
