Decided which papers to include.  Updated software packages section.  Revised awards section.

--- a/swall_resume.tex
+++ b/swall_resume.tex
@@ -39,14 +39,11 @@ Richmond, VA $\quad | \quad$ 804-244-2238 $\quad | \quad$ jlswall@alum.mit.edu\\
 
 
 
-%\vspace*{0.1in}
-
-
 
 %\noindent {\Large \textbf{Professional profile}}
 Accomplished statistician, research scientist, and communicator.  Adept in all
-phases of statistical model development, programming, and evaluation, including
-Bayesian methods. Experienced in cross-disciplinary collaboration and
+phases of statistical model development, programming, and evaluation across
+diverse application areas. Experienced in cross-disciplinary collaboration and
 distillation of technical results for audiences at all levels.
 
 
@@ -197,35 +194,6 @@ Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 % \end{list}
 
 
-% \newempl
-% \textsc{SAS Institute}\\ %% \hfill Cary, NC\\
-% %Assistant Applications Developer (Consulting Services), June
-% %1996-August 1997\\
-% \textit{Assistant Applications Developer}, 1996-1997
-
-% \begin{list}{$\bullet$}{
-% \setlength{\topsep}{0cm}
-% \setlength{\partopsep}{0cm}
-% \setlength{\parsep}{0cm}
-% \setlength{\itemsep}{0cm}
-% \setlength{\labelsep}{1ex}
-% \setlength{\labelwidth}{1em}
-% \setlength{\leftmargin}{1em}
-% }
-% \item Designed and implemented SAS software solutions, with emphasis on
-% providing user-friendly interfaces, maintaining data security,
-% managing databases, and generating reports easily and efficiently
-% \item Advised clients in areas such as banking, human resources management, and
-% educational administration
-% \end{list}
-% %\newitem
-
-% %\textsc{Inter-National Research Institute} \hfill Newport News, VA\\
-% %Junior Software Quality Assurance Analyst, summer months and January, 1992-1995\\
-% %Prepared and executed test procedures for naval communications and
-% %tactical software.  Worked closely with software developers and
-% %ensured quality of software additions, patches, and integrated builds.
-
 
 
 \newsectn
@@ -254,7 +222,7 @@ B.S.~in Mathematics (applied emphasis)\\ %, May 1994\\
 
 \textbf{Expert (20+ years experience)}: R, Linux/UNIX operating systems, LaTeX\\
 \textbf{Proficient}: C, SQL, SAS\\
-\textbf{Novice}: Python
+\textbf{Some experience}: Python
 
 %SAS experience:  ACCESS, AF, BASE, CONNECT, EIS, FSP, GRAPH, INSIGHT, STAT\\
 %% Document preparation:  LaTeX, Microsoft Office, Google Docs, HTML
@@ -275,19 +243,19 @@ B.S.~in Mathematics (applied emphasis)\\ %, May 1994\\
 % \setlength{\leftmargin}{0cm}
 % \setlength{\itemsep}{0cm}
 % }
-$\bullet$ \textbf{aqfig}: R package for displaying air quality model output and monitoring data
-%Available from the Comprehensive R Archive Network, last updated November 2013  %% (original release June 2011)
-% \hspace*{0.3cm} Version 0.4 released January 2013\\
-% \hspace*{0.3cm} Version 0.3 released May 2012\\
-% \hspace*{0.3cm} Version 0.2 released October 2011\\
 
-$\bullet$ \textbf{figdim}: R package for specifying figure dimensions for publication-ready graphics
+\textbf{M3}: R package for reading and manipulating air quality model
+output from Models3-formatted files\\
+\textbf{aqfig}: R package for displaying air quality model output and
+monitoring data\\
+$\bullet$ Available for download from the Comprehensive R Archive Network
+(CRAN)\\
+$\bullet$ Significant updates released in summer 2024
+
+%$\bullet$ \textbf{figdim}: R package for specifying figure dimensions for
+%publication-ready graphics
 %Available from \url{http://www.people.vcu.edu/~jswall/figdim_index.html}, released November 2013
 
-$\bullet$ \textbf{M3}: R package for reading and manipulating air quality model output from Models3-formatted files
-%Available from the Comprehensive R Archive Network, last updated May 2012  %% (original release June 2011)
-% \hspace*{0.3cm} Version 0.2 released January 2012\\
-%\end{list}
 
 
 
@@ -296,7 +264,7 @@ $\bullet$ \textbf{M3}: R package for reading and manipulating air quality model 
 \noindent {\Large \textbf{Selected awards}}
 
 \textbf{Jeanne E.~Griffith Mentoring Award}, 2011 (sole recipient)\\  %% Awarded June 2011
-\textit{Selected annually from statisticians across U.S.~federal government agencies}\\
+$\bullet$ Selected annually from statisticians across all U.S.~federal government agencies\\
 %\vspace{-0.06in}
 %\begin{adjustwidth}{0.25in}{}
 %\textit{``For the mentoring of junior staff in the federal statistical
@@ -311,8 +279,9 @@ system''
 %\end{adjustwidth}
 
 \newitem
-\textbf{2011 Collaboration Award}, 2011 (sole recipient)\\
-\textit{Selected annually from approximately 50 scientific staff in former EPA division}\\
+\textbf{Collaboration Award}, Atmospheric Modeling and Analysis Division, 2011 (sole recipient)\\
+$\bullet$ Selected annually from approximately 50 scientific staff in EPA research
+division\\
 $\bullet$ Awarded ``for contributing valuable statistical and programming
 expertise to projects within AMAD and across ORD in a positive and professional
 manner''\\
@@ -346,7 +315,7 @@ manner''\\
 
 
 \newsectn
-{\Large \textbf{Recent peer-reviewed publications}} (more at
+{\Large \textbf{Selected peer-reviewed publications}} (more at
 \url{https://orcid.org/0000-0001-8728-5771})
 
 % %%\vspace*{-0.1in}
@@ -361,32 +330,29 @@ manner''\\
 % \setlength{\itemsep}{0cm}
 % }
 
-$\bullet$ Santillán, P., Edwards, S., \textbf{Swall, J.}, Simmons, T. ``Mass
-grave localization prediction with geographical information systems in
-Guatemala and future impacts", \textit{Journal of Forensic Sciences}, 2022.
-% https://doi.org/10.1111/1556-4029.14889
-
 $\bullet$ Cartozzo, C., Singh, B., \textbf{Swall, J.},  Simmons, T.
 ``Postmortem submersion interval (PMSI) estimation from the microbiome of
 \textit{Sus scrofa} bone in a freshwater lake", \textit{Journal of
 Forensic Sciences}, 2021.
 
-%  https://doi.org/10.1111/1556-4029.14692
-$\bullet$ Randall, S.D., Cartozzo, C., Simmons, T., \textbf{Swall, J.~L.},
-Singh, B. ``Prediction of minimum postmortem submersion interval (PMSImin)
-based on eukaryotic community succession on skeletal remains recovered from
-a lentic environment", \textit{Forensic Science International}, 2021.
+$\bullet$ Forger, L.~V., Woolf, M.~S., Simmons, T., \textbf{Swall, J.~L.},
+Singh, B.  ``A eukaryotic community succession based method for
+postmortem interval (PMI) estimation of decomposing porcine
+remains", \textit{Forensic Science International}, 2019.
 
-% https://doi.org/10.1016/j.forsciint.2021.110784.
-$\bullet$ Woods, N., \textbf{Swall, J.~L.}, Zinnert, J.~C. ``Soil salinity
-  impacts future community composition of coastal forests", \textit{Wetlands},
-  2020.
-  % Pub. online 21May2020.
-  % doi: https://doi.org/10.1007/s13157-020-01304-6
+%$\bullet$ Randall, S.D., Cartozzo, C., Simmons, T., \textbf{Swall, J.~L.},
+%Singh, B. ``Prediction of minimum postmortem submersion interval (PMSImin)
+%based on eukaryotic community succession on skeletal remains recovered from
+%a lentic environment", \textit{Forensic Science International}, 2021.
 
-% \item \textbf{Swall, J.~L.}, Foley, K.~M., 2009.  The impact of spatial
-% correlation and incommensurability on model evaluation.
-% \textit{Atmospheric Environment}, Vol.~43, No.~6, 1204-1217.
+$\bullet$ \textbf{Swall, J.~L.}, Foley, K.~M.  ``The impact of spatial
+correlation and incommensurability on model evaluation."
+\textit{Atmospheric Environment}, 2009.
+
+$\bullet$ \textbf{Swall, J.~L.} Davis, J.~M. ``A Bayesian
+statistical approach for the evaluation of CMAQ", \textit{Atmospheric
+Environment}, 2006.
+
 
 %\end{list}
 
