Continued work on resume.

--- a/swall_resume.tex
+++ b/swall_resume.tex
@@ -40,12 +40,26 @@ Richmond, VA $\quad | \quad$ 804-244-2238 $\quad | \quad$ jlswall@alum.mit.edu\\
 
 
 
-%\noindent {\Large \textbf{Professional profile}}
-Accomplished statistician, research scientist, and communicator.  Adept in all
-phases of statistical model development, programming, and evaluation across
-diverse application areas. Experienced in cross-disciplinary collaboration and
-distillation of technical results for audiences at all levels.
-
+\noindent {\Large \textbf{Professional profile}}
+\begin{list}{$\bullet$}{
+  \setlength{\topsep}{0cm}
+  \setlength{\partopsep}{0cm}
+  \setlength{\parsep}{0cm}
+  \setlength{\itemsep}{0cm}
+  \setlength{\labelsep}{1ex}
+  \setlength{\labelwidth}{1em}
+  \setlength{\leftmargin}{1em}
+  }
+\item Skilled statistician, research scientist, and communicator
+%May change to data scientist.
+\item Adept in all phases of statistical model development and evaluation across
+diverse application areas
+\item Proficient programmer (multiple languages), comfortable with Linux,
+git, and systems administration
+\item Expert in cross-disciplinary collaboration and distillation of technical
+results for audiences at all levels
+\item Gifted teacher and mentor for students and junior staff
+\end{list}
 
 
 \newsectn
@@ -65,14 +79,18 @@ distillation of technical results for audiences at all levels.
 \setlength{\labelwidth}{1em}
 \setlength{\leftmargin}{1em}
 }
-\item Utilized random forest techniques with bacterial and eukaryotic genomic data for predicting
-post-mortem interval 
-\item Implemented overdispersed Poisson regression models for assessing the impact of air pollutants on mortality
-\item Reviewed and recommended adjustments for proprietary statistical
-  modeling strategies for Capital One
-\item Designed and taught courses in probability and statistics at the
-undergraduate and graduate levels
-\item Facilitated approximately \$90000 in computer equipment upgrades in statistics and operations research classrooms and student laboratories, through service on the College of Humanities and Sciences technology committee 
+\item Designed and taught courses in probability and statistics to upper-level
+students in diverse disciplines, earning an average course evaluation of
+?\slash 5.
+\item Developed course in applied analytics for fourth-year students in
+statistics, emphasizing data wrangling, statistical programming, and consulting
+skills.
+\item Directed statistical analysis for applied research projects in forensic
+science and biology, resulting in ? peer-review publications.
+\item Mentored ? graduate students in statistics, forensic science, and
+environmental science.
+\item Authored thousands of lines of code in R, Python, and VBA, including two R
+packages available on CRAN.
 \end{list}
 
 
@@ -90,10 +108,12 @@ undergraduate and graduate levels
 \setlength{\labelwidth}{1em}
 \setlength{\leftmargin}{1em}
 }
-\item Analyzed large datasets to identify operational trends %and interpret
-\item Proposed and advocated strategies to improve customer experience, facilitate billing procedures, and anticipate shipping issues
-\item Developed and communicated forecasts for revenue, staffing, and other key business functions
-\item Interviewed prospective data scientist team members
+\item Analyzed customer and product databases using SQL to identify operational
+trends. %and interpret
+\item Proposed and advocated strategies to improve customer experience,
+facilitate billing procedures, and anticipate shipping issues.
+\item Developed and communicated forecasts for revenue, staffing, and other key
+business functions.
 \end{list}
 
 
@@ -125,7 +145,8 @@ Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 \end{list}
 
 
-
+\newpage
+\newgeometry{top=0.75in, bottom=0.75in, left=0.75in, right=0.75in, headsep=0.5in}
 
 
 % %% \newempl
@@ -204,9 +225,6 @@ Assigned to U.S.~EPA from National Oceanic and Atmospheric Administration,
 Ph.D.~in Statistics and Decision Sciences %, December 1999\\
 %% \hspace*{0.4cm}Dissertation: \textbf{Non-stationary spatial modeling using a process convolution approach}\\
 %% M.S.~in Statistics and Decision Sciences %, May 1996
-
-\newpage
-\newgeometry{top=0.75in, bottom=0.75in, left=0.75in, right=0.75in, headsep=0.5in}
 
 
 
